<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id = "@+id/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedbackdetails" />

    <EditText
        android:id="@+id/sender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email1"
        android:inputType="textEmailAddress" />

    <Spinner
        android:id="@+id/sType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.83"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/chkResponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Need a response?" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="40dp"
            android:text="@string/Send" />

        <Button
            android:id="@+id/feedbackCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="39dp"
            android:text="@string/Cancel" />
    </RelativeLayout>

</LinearLayout>